Adjusting spacing inside modals and fixing buttons.

--- a/drupal/sites/all/themes/checkdesk/assets/scss/_alerts.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_alerts.scss
@@ -222,7 +222,7 @@ a.absolute-messages-dismiss-all:hover {
   height: 0;
   border-width: 16px 16px 0 0;
   border-style: solid;
-  border-color: transparent $link-color;
+  border-color: transparent $linkColor;
   @include box-shadow(0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2));
   z-index: 1;
 }
